--- a/assets/admin/stylesheets/style.css
+++ b/assets/admin/stylesheets/style.css
@@ -480,3 +480,4 @@ a{text-decoration:none !important;}
 .responsive-table table td {overflow: visible;}
 .responsive-table {position: relative;overflow: hidden;}
 .action_drop_down .btn-group > .btn, .btn-group-vertical > .btn {float: left;}
+/*.action_drop_down  .sr-only {position: relative;}*/
