Displayed Followers and Following Users Listing. [Done] Added more Search Options on Ads Listing and Users Listings. [Done] Worked on Sub-category Display at Front End. [Done] Set links for Followers and Following Users List on View Users Details Page. [Done] Added few links on Ads and Users Listing. [Done]

--- a/assets/admin/stylesheets/style.css
+++ b/assets/admin/stylesheets/style.css
@@ -481,3 +481,4 @@ a{text-decoration:none !important;}
 .responsive-table {position: relative;overflow: hidden;}
 .action_drop_down .btn-group > .btn, .btn-group-vertical > .btn {float: left;}
 /*.action_drop_down  .sr-only {position: relative;}*/
+.display-none {display:none;}
