List of Completed Tasks :
    Completed following things on https://doukani.com/allstores Page . [Done]
        Displayed Products List in Grid and List View.
        Load More Products list display in Grid and List View.

List of In-progress Tasks :

    Working on to display Product List with Search Option and Category selection on https://doukani.com/allstores.
    Working with Banner Display on Products List Page.

--- a/assets/front/style.css
+++ b/assets/front/style.css
@@ -1504,7 +1504,7 @@ html, body{max-width:100%;overflow-x:hidden;}
 .map_list .img-holder .sold > span{z-index:2 !important;}
 .map_list .img-holder .sold{z-index:2 !important;}
 .ord-action{text-align:center;}
-.store-products-list-wrapper .item-sell .price{width:90%;}
+/*.store-products-list-wrapper .item-sell .price{width:90%;}*/
 .store-related-items .item-sell .price{width:90%;}
 .contact-us-btn{padding:8px 43px;}
 .store-products-head .grid{float:right;padding-left:16px;padding-top:10px;padding-right:15px}
