--- a/assets/front/responsive.css
+++ b/assets/front/responsive.css
@@ -1244,7 +1244,7 @@ header#header .UserOuter{margin:30px -6px 0 6px;padding:0 21px 0 0;}
 .detail-block .action-wrap .black-btn{padding:8px 10px;}
 }
 @media(max-width:1200px){.prod-info .red-btn{margin:0 5px 10px;}
-.prod-info .cart-btn, .prod-info .black-btn{margin:0 5px 10px;}
+.prod-info .cart-btn, .prod-info .black-btn, .prod-info.continue_ship{margin:0 5px 10px;}
 .detail-block .action-wrap .red-btn,
 .detail-block .action-wrap .black-btn{padding:8px 20px;}
 .classified-registration .agree {margin-top: 0px;margin-bottom: 15px;}
